# sentimentAnalysisplfm

./: .gitignore  README.md  config.py  docker-compose.yml  dockerfile.base  pyproject.toml
api/: Dockerfile  main.py  metrics.py  routes.py
consumer/: Dockerfile  hn_consumer.py  s3_writer.py
feature_store/: feast_client.py  feature_store.yaml  features.py
ml/: sentiment_model.py  tracking.py
monitoring/: drift_detector.py
producer/: Dockerfile  hn_producer.py
sentiment_platform/: config.py  models.py
