[project]
name = "sentimentplatform"
version = "0.1.0"
description = "Real-time Sentiment Analytics Platform"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
streaming = [
    "confluent-kafka>=2.3.0",
    "avro-python3>=1.10.2",
    "httpx>=0.26.0",
]
storage = [
    "boto3>=1.34.0",
    "redis>=5.0.0",
    "polars>=0.20.0",
]
ml = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "optuna>=3.5.0",
    "mlflow>=2.9.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
]

api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "prometheus-client>=0.19.0",
]

monitoring = [
    "evidently>=0.4.0",
    "prometheus-client>=0.19.0",
]

dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

all = [
    "sentimentplatform[streaming,storage,ml,api,monitoring,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
sources = { torch = { index = "pytorch-cpu" } }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true